[package]
name = "clippy_macros"
version = "0.1.72"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
itertools = "0.11.0"
proc-macro2 = "1.0.63"
quote = "1.0.26"
syn = { version = "2.0.22", features = ["extra-traits", "full"] }

[features]
deny-warnings = []
